initial implementation of blog app

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio-service",
+  "name": "blog-service",
   "version": "1.0.0",
   "description": "Node.js app for portfolio",
   "bin": "bin/createNodejsApp.js",
